# ConvexCut

./: CMakeLists.txt  main.cpp
